[gd_scene load_steps=9 format=3 uid="uid://cai78k8j65ea3"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_sanwq"]
[ext_resource type="Texture2D" uid="uid://da063j1cubogk" path="res://textures/ui_white_panel_bg.png" id="1_wv40e"]
[ext_resource type="FontFile" uid="uid://c42yu4n3i21fd" path="res://fonts/Retro Gaming.ttf" id="2_d0r6i"]
[ext_resource type="Texture2D" uid="uid://cqwtpssf0nbwk" path="res://textures/main_menu_layer.png" id="4_b6uou"]
[ext_resource type="Texture2D" uid="uid://he3qoa6xxp2d" path="res://textures/yes_button.png" id="5_0258l"]
[ext_resource type="Texture2D" uid="uid://bvtpstw5xoj4b" path="res://textures/no_button.png" id="6_uipan"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8084i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbm0f"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sanwq")

[node name="PausePanel" type="Control" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PausePanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wv40e")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleText" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0r6i")
theme_override_font_sizes/font_size = 33
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="PausePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0r6i")
theme_override_font_sizes/font_size = 22
text = "Settings"

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0r6i")
theme_override_font_sizes/font_size = 22
text = "Quit
"

[node name="QuitConfirmPanel" type="Control" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -60.0
offset_right = 175.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="QuitConfirmPanel"]
position = Vector2(161, 60)
scale = Vector2(4, 4)
texture = ExtResource("4_b6uou")

[node name="YesButton2" type="Button" parent="QuitConfirmPanel"]
layout_mode = 2
offset_left = -68.0
offset_top = 95.0
offset_right = -9.0
offset_bottom = 145.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("2_d0r6i")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_8084i")
icon = ExtResource("5_0258l")

[node name="NoButton2" type="Button" parent="QuitConfirmPanel"]
layout_mode = 2
offset_left = 228.0
offset_top = 94.0
offset_right = 278.0
offset_bottom = 144.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("2_d0r6i")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_rbm0f")
icon = ExtResource("6_uipan")

[connection signal="pressed" from="PausePanel/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="QuitConfirmPanel/YesButton2" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="QuitConfirmPanel/NoButton2" to="." method="_on_no_button_pressed"]
